# context-server

./: .gitignore  Cargo.toml  Containerfile  PLAN.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: build-wheel.sh  next-calver.sh  set-version.sh
src/: bm25.rs  embed.rs  index.rs  main.rs  mcp.rs  remote.rs  search.rs  store.rs
