[package]
name = "context-server"
version = "0.1.3"
edition = "2021"
description = "Lightweight MCP server for semantic search over organizational markdown"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shanemcd/context-server"
homepage = "https://github.com/shanemcd/context-server"
keywords = ["mcp", "embeddings", "semantic-search", "rag", "sqlite"]
categories = ["command-line-utilities", "science"]
exclude = [".linker/", "target/", "*.db"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
fastembed = "5"
regex = "1"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros", "schemars"] }
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
