[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "context-server"
description = "Lightweight MCP server for semantic search over organizational markdown"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/context-server/context-server"

[tool.maturin]
bindings = "bin"
strip = true
